# glynth

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
cmake/: FindGperftools.cmake  utils.cmake
script/: make_outline.py  make_wav.py  read_outline.py
shader/: background.frag  char.frag  frag.glsl  knob.frag  knob_frag.glsl  lissajous.frag  ortho.vert  ortho_vert.glsl  param.frag  rect.vert  rect_frag.glsl  rect_vert.glsl  scope.frag  vert.glsl  vert_forward.glsl  vt220.frag  vt220.glsl
src/: editor.cpp  editor.h  error.h  font_manager.cpp  font_manager.h  logger.h  outliner.cpp  outliner.h  processor.cpp  processor.h  read.cpp  shader_manager.cpp  shader_manager.h
